BACKLOG-20632: Fix alignment issue with deleted url.

--- a/core/src/javascript/components/VanityList/DefaultRow.scss
+++ b/core/src/javascript/components/VanityList/DefaultRow.scss
@@ -112,6 +112,7 @@
 
 .deletedUrl {
   text-decoration: line-through;
+  padding: 3px 6px 1px;
 }
 
 .missingDefault {
